# CeCe

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  CeCe.workspace  Copyright.txt  Info.plist.in  Makefile  README.md  TODO.txt  _config.yml  appveyor.yml  blog.md  bundle.sh  cell-sim.workspace  download.md  grow_simulator.workspace  index.md
app/cli/: Arguments.cpp  Arguments.hpp  CMakeLists.txt  Image.cpp  Image.hpp  Simulator.cpp  Simulator.hpp  cece-cli.sh  cli.project  config.hpp.in  main.cpp  version.hpp.in  version.rc
app/gui/: AboutDialog.cpp  AboutDialog.h  AboutDialog.hpp  AboutDialog.ui  AddDialog.ui  CMakeLists.txt  DataExportPlot.cpp  DataExportPlot.hpp  DataExportPlotFactory.cpp  DataExportPlotFactory.hpp  LogStream.cpp  LogStream.hpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  PlotCreateDialog.cpp  PlotCreateDialog.hpp  PlotCreateDialog.ui  PlotCustomizationDialog.cpp  PlotCustomizationDialog.hpp  PlotCustomizationDialog.ui  PlotWidget.cpp  PlotWidget.hpp  PlotWidget.ui  PluginsDialog.h  Simulator.cpp  Simulator.hpp  VisualizationWidget.cpp  VisualizationWidget.hpp  XmlHighlighter.cpp  XmlHighlighter.hpp  gui.project  icons.qrc  main.cpp  version.hpp.in  wxcrafter.cpp  wxcrafter.h  wxcrafter.wxcp  wxcrafter_bitmaps.cpp  wxcrafter_bitmaps.xrc
cece/: CMakeLists.txt  CeCe.project  config.hpp.in
cece/config/: CMakeLists.txt  Configuration.cpp  Configuration.hpp  Exception.hpp  Implementation.cpp  Implementation.hpp  MemoryImplementation.cpp  MemoryImplementation.hpp
cece/core/: AlignedAllocator.cpp  AlignedAllocator.hpp  Any.hpp  Assert.hpp  Atomic.hpp  BinaryInput.hpp  BinaryOutput.hpp  CMakeLists.txt  CliColor.cpp  CliColor.hpp  CsvFile.cpp  CsvFile.hpp  DataExport.cpp  DataExport.hpp  DataExportCsv.cpp  DataExportCsv.hpp  DataExportCsvFactory.cpp  DataExportCsvFactory.hpp  DataExportFactory.cpp  DataExportFactory.hpp  DataTable.cpp  DataTable.hpp  DynamicArray.hpp  Exception.hpp  ExpressionParser.cpp  ExpressionParser.hpp  Factory.hpp  FactoryManager.hpp  FilePath.cpp  FilePath.hpp  FileStream.hpp  Grid.cpp  Grid.hpp  InOutStream.hpp  InStream.hpp  IntegerSequence.hpp  IterationRange.hpp  IterationType.hpp  IteratorRange.hpp  LexicalCast.hpp  (+49 more)
cece/init/: CMakeLists.txt  Container.cpp  Container.hpp  Factory.cpp  Factory.hpp  FactoryManager.cpp  FactoryManager.hpp  Initializer.hpp
cece/loader/: CMakeLists.txt  Factory.cpp  Factory.hpp  FactoryManager.cpp  FactoryManager.hpp  Loader.cpp  Loader.hpp  LoaderFactory.hpp  LoaderFactoryManager.cpp  LoaderFactoryManager.hpp
cece/module/: CMakeLists.txt  Container.cpp  Container.hpp  ExportModule.cpp  ExportModule.hpp  Factory.cpp  Factory.hpp  FactoryManager.cpp  FactoryManager.hpp  Module.cpp  Module.hpp
cli/: CMakeLists.txt  Render.cpp  Render.hpp  cece-cli.sh  cli.project  main.cpp  simulator-cli.sh  version.rc
core/: AlignedAllocator.cpp  AlignedAllocator.hpp  Any.hpp  Assert.hpp  Barrier.cpp  Barrier.h  BarrierPhysics.cpp  BarrierPhysics.h  CMakeLists.txt  Cell.cpp  Cell.h  CellPhysics.cpp  CellPhysics.h  DataTable.cpp  DataTable.hpp  DynamicArray.hpp  Exception.hpp  ExpressionParser.cpp  ExpressionParser.hpp  Factory.hpp  FilePath.cpp  FilePath.hpp  FileStream.hpp  Flow.cpp  Flow.h  Grid.cpp  Grid.hpp  IStream.hpp  InStream.hpp  IntegerSequence.hpp  Iterator.hpp  JsWorld.cpp  JsWorld.h  JsWorldLoader.cpp  JsWorldLoader.h  LexicalCast.hpp  ListenerContainer.hpp  Log.cpp  Log.hpp  Macro.hpp  (+51 more)
gui/: AboutDialog.cpp  AboutDialog.h  CMakeLists.txt  CanvasWidget.cpp  CanvasWidget.h  CanvasWidget.hpp  Logger.cpp  Logger.hpp  MainFrame.cpp  MainFrame.h  ModulesDialog.cpp  ModulesDialog.h  PluginsDialog.cpp  PluginsDialog.h  PngImage.cpp  PngImage.h  Simulator.cpp  Simulator.h  SimulatorThread.cpp  SimulatorThread.hpp  VectorCtrlBase.h  VectorFloatCtrl.cpp  VectorFloatCtrl.h  VectorIntCtrl.cpp  VectorIntCtrl.h  app.desktop  gui.project  main.cpp  run.sh  version.hpp.in  version.rc  wxcrafter.cpp  wxcrafter.h  wxcrafter.wxcp  wxcrafter_bitmaps.cpp  wxcrafter_bitmaps.xrc
javascript/: Barrier.cpp  Barrier.hpp  CMakeLists.txt  Canvas.cpp  Canvas.hpp  Cell.cpp  Cell.hpp  World.cpp  World.h  World.hpp  WorldFactory.cpp  WorldFactory.h  WorldFactory.hpp  Yeast.cpp  Yeast.hpp  javascript.project
parser/: CMakeLists.txt  Parser.cpp  Parser.hpp  SimulationFactory.cpp  SimulationFactory.hpp  WorldFactory.cpp  WorldFactory.hpp  parser.project
parser-xml/: CMakeLists.txt  ImmutableConfiguration.hpp  MutableConfiguration.hpp  SimulationFactory.cpp  SimulationFactory.hpp  parser-xml.project  parser.mk
physics/: Barrier.cpp  Barrier.hpp  CMakeLists.txt  Cell.cpp  Cell.h  Cell.hpp  Ground.cpp  Ground.h  Ground.hpp  Object.cpp  Object.h  Object.hpp  Position.h  Position.hpp  World.cpp  World.h  physics.project
render/: Buffer.cpp  Buffer.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Circle.cpp  Circle.hpp  Color.cpp  Color.hpp  Context.cpp  Context.h  Context.hpp  Drawable.cpp  Drawable.hpp  Font.cpp  Font.hpp  Grid.cpp  Grid.hpp  GridBase.hpp  GridColor.cpp  GridColor.hpp  GridColorColorMap.cpp  GridColorColorMap.hpp  GridColorSmooth.cpp  GridColorSmooth.hpp  GridValue.cpp  GridValue.hpp  GridVector.cpp  GridVector.hpp  ImageData.hpp  Lines.cpp  Lines.hpp  Object.cpp  Object.hpp  PhysicsDebugger.cpp  PhysicsDebugger.hpp  Position.hpp  Program.cpp  Program.hpp  Rectangle.cpp  (+17 more)
simulator/: Acceleration.hpp  Barrier.cpp  Barrier.hpp  CMakeLists.txt  Cell.cpp  Cell.h  Cell.hpp  CellGenerator.cpp  CellGenerator.hpp  Configuration.cpp  Configuration.hpp  DiffusionModule.cpp  DiffusionModule.hpp  DiffusionStreamlinesModule.cpp  DiffusionStreamlinesModule.hpp  DynamicObject.cpp  DynamicObject.hpp  Grid.hpp  Library.cpp  Library.hpp  LibraryApi.hpp  ListenerContainer.hpp  LoaderManager.cpp  LoaderManager.hpp  Module.cpp  Module.hpp  ModuleContainer.cpp  ModuleContainer.hpp  ModuleFactory.hpp  ModuleFactoryManager.cpp  ModuleFactoryManager.hpp  ModuleManager.cpp  ModuleManager.hpp  Object.cpp  Object.hpp  ObjectClass.hpp  ObjectContainer.cpp  ObjectContainer.hpp  ObjectFactory.hpp  ObjectFactoryManager.cpp  (+51 more)
(+1023 files in other folders)
